fixed inconsistent footer spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41792,7 +41792,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-text-3 {
-  margin: 0 0 15px;
+  margin: 0 0 11px;
 }
 
 .u-footer .u-btn-2 {
